<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/dialog_signup"
   >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dialog_signup"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginEnd="200dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_logo_selectOption"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:maxLength="20"
                android:paddingTop="10dp"
                android:src="@mipmap/ic_launcher"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/et_firstName"
                style="@style/EditTextForm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/item_selector_login"
                android:focusable="true"
                android:hint="@string/enter_your_first_name"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:nextFocusDown="@+id/et_lastName"
                tools:ignore="Autofill,RtlCompat,RtlSymmetry,TextFields" />

            <EditText
                android:id="@+id/et_lastName"
                style="@style/EditTextForm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/item_selector_login"
                android:focusable="true"
                android:hint="@string/enter_your_last_name"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:nextFocusUp="@+id/et_firstName"
                tools:ignore="Autofill,RtlCompat,RtlSymmetry,TextFields" />

            <EditText
                android:id="@+id/et_emailID"
                style="@style/EditTextForm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/item_selector_login"
                android:focusable="true"
                android:hint="@string/enter_your_email_id"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:nextFocusDown="@+id/et_password"
                android:nextFocusUp="@+id/et_lastName"
                tools:ignore="Autofill,RtlCompat,RtlSymmetry,TextFields" />


            <EditText
                android:id="@+id/et_password"
                style="@style/EditTextForm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/item_selector_login"
                android:focusable="true"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:nextFocusUp="@+id/et_emailID"
                android:nextFocusDown="@+id/et_conform_password"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                tools:ignore="Autofill,RtlCompat,RtlSymmetry,TextFields" />

            <EditText
                android:id="@+id/et_conform_password"
                style="@style/EditTextForm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/item_selector_login"
                android:focusable="true"
                android:hint="@string/re_enter_your_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:nextFocusUp="@+id/et_password"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                tools:ignore="Autofill,RtlCompat,RtlSymmetry,TextFields" />


            <Button
                android:id="@+id/btnSignUp"
                style="@style/ButtonForm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/item_selector_login_button"
                android:focusable="true"
                android:nextFocusUp="@+id/et_conform_password"
                android:text="@string/sign_up"
                android:textColor="@color/white" />

            <RelativeLayout
                android:id="@+id/relative_layout_google_login"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@drawable/item_selector_google"
                android:focusable="true"
                android:gravity="center">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/bg_btnlgmail"
                    android:padding="3dp"
                    app:srcCompat="@drawable/ic_google_login" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="40dp"
                    android:gravity="center"
                    android:text="התחבר עם גוגל"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </RelativeLayout>


            <TextView
                android:id="@+id/tv_login"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="center"
                android:layout_marginLeft="40dp"
                android:focusable="true"
                android:background="@drawable/item_selector"
                android:layout_gravity="center"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/login_now"
                android:textColor="@color/white"
                android:textSize="16dp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>