<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr">

    <RelativeLayout
        android:id="@+id/rel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/dialog_dark"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingTop="5dp">

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="10dp"
                        android:tint="@color/white"
                        app:srcCompat="@drawable/ic_subscribe" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginLeft="50dp"
                        android:gravity="center|left"
                        android:text="Be Premium Be Free"
                        android:textColor="@color/white"
                        android:textSize="14dp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LinearLayout"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="13dp"
                android:text="@string/description_subsribte"
                android:textColor="@color/white_text"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="5dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="7dp"
                    android:tint="#ccc"
                    app:srcCompat="@drawable/ic_file_download" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|left"
                        android:text="@string/download_premium_content"
                        android:textColor="@color/white"
                        android:textSize="14dp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="5dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="7dp"
                    android:tint="#ccc"
                    app:srcCompat="@drawable/ic_media_play_dark" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|left"
                        android:text="@string/play_premium_content"
                        android:textColor="@color/white"
                        android:textSize="14dp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="8dp"
                    android:tint="#ccc"
                    app:srcCompat="@drawable/ic_stop_ads" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|left"
                        android:text="@string/dialog_text_no_ads_title"
                        android:textColor="@color/white"
                        android:textSize="14dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|left"
                        android:text="@string/dialog_text_no_ads_description"
                        android:textColor="@color/white_text"
                        android:textSize="10dp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="הרשמה למנוי פרימיום בעלות של 37 שקל לחודש"
                android:textColor="@color/yellow"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="התחברות רק עם משתמש קיים בלינק הבא:"
                android:textColor="@color/yellow"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="https://payments.nachosisrael.com"
                android:textDirection="rtl"
                android:textColor="@color/yellow"
                android:textStyle="bold" />


            <RelativeLayout
                android:id="@+id/relative_layout_watch_ads"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/gradient_dialog_btn_ads"
                android:visibility="gone">

                <TextView
                    android:id="@+id/text_view_watch_ads"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="WATCH VIDEO ADS TO UNLOCK"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </RelativeLayout>

<!--            <Button-->
<!--                android:id="@+id/text_view_go_pro"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="45dp"-->
<!--                android:background="@color/colorAccent"-->
<!--                android:focusable="true"-->
<!--                android:focusableInTouchMode="true"-->
<!--                android:gravity="center"-->
<!--                android:text="SUBSCRIBE NOW"-->
<!--                android:textAlignment="center"-->
<!--                android:textColor="@color/white"-->
<!--                android:textSize="15dp"-->
<!--                android:textStyle="bold" />-->
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>